@@ -8,6 +8,7 @@ with respect to new features and compatibility changes.
  * Added wing.format_field_label() for generating make shift field labels on the fly.
  * Added search_params to wing.vue.js wing.object_list.all() and wing.object_list.search().
  * Added v-autosavedelay and v-autosavefield options for the v-autosave directive in wing.vue.js.
+ * Added <wing-options-label> component to wing.vue.js.
 
 2020-08-19
  * Added wing.natural_sort() utility for sorting lists so that numbers appear naturally in alpha-numeric lists.
